# qtty-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: qtty_cppConfig.cmake.in
docs/: QUICK_REFERENCE.md  README.md  architecture.md  build-and-testing.md  extending-units.md
examples/: demo.cpp
include/qtty/: ffi_core.hpp  literals.hpp  qtty_ffi.hpp  serialization.hpp
include/qtty/units/: angular_ffi.hpp  length_ffi.hpp  mass_ffi.hpp  power_ffi.hpp  time_ffi.hpp  velocity_ffi.hpp
tests/: fixtures.hpp  test_angular.cpp  test_derived.cpp  test_dimension_safety.cpp  test_ffi.cpp  test_length.cpp  test_mass.cpp  test_operations.cpp  test_power.cpp  test_precision.cpp  test_serialization.cpp  test_time.cpp
